--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/cccnqu/ws107a#readme",
   "dependencies": {
+    "ejs": "^2.6.1",
+    "fs-promise": "^2.0.3",
     "kdd": "^1.1.0",
     "koa": "^2.5.2",
+    "koa-basic-auth": "^3.0.0",
     "koa-body": "^4.0.4",
     "koa-compose": "^4.1.0",
     "koa-csrf": "^3.0.6",
